--- a/config/crd/bases/sqs.services.k8s.aws_queues.yaml
+++ b/config/crd/bases/sqs.services.k8s.aws_queues.yaml
@@ -37,10 +37,31 @@ spec:
             description: QueueSpec defines the desired state of Queue
             properties:
               queueName:
+                description: "The name of the new queue. The following limits apply
+                  to this name: \n    * A queue name can have up to 80 characters.
+                  \n    * Valid values: alphanumeric characters, hyphens (-), and
+                  underscores    (_). \n    * A FIFO queue name must end with the
+                  .fifo suffix. \n Queue URLs and names are case-sensitive."
                 type: string
               tags:
                 additionalProperties:
                   type: string
+                description: "Add cost allocation tags to the specified Amazon SQS
+                  queue. For an overview, see Tagging Your Amazon SQS Queues (https://docs.aws.amazon.com/AWSSimpleQueueService/latest/SQSDeveloperGuide/sqs-queue-tags.html)
+                  in the Amazon Simple Queue Service Developer Guide. \n When you
+                  use queue tags, keep the following guidelines in mind: \n    * Adding
+                  more than 50 tags to a queue isn't recommended. \n    * Tags don't
+                  have any semantic meaning. Amazon SQS interprets tags as    character
+                  strings. \n    * Tags are case-sensitive. \n    * A new tag with
+                  a key identical to that of an existing tag overwrites    the existing
+                  tag. \n For a full list of tag restrictions, see Limits Related
+                  to Queues (https://docs.aws.amazon.com/AWSSimpleQueueService/latest/SQSDeveloperGuide/sqs-limits.html#limits-queues)
+                  in the Amazon Simple Queue Service Developer Guide. \n To be able
+                  to tag a queue on creation, you must have the sqs:CreateQueue and
+                  sqs:TagQueue permissions. \n Cross-account permissions don't apply
+                  to this action. For more information, see Grant cross-account permissions
+                  to a role and a user name (https://docs.aws.amazon.com/AWSSimpleQueueService/latest/SQSDeveloperGuide/sqs-customer-managed-policy-examples.html#grant-cross-account-permissions-to-role-and-user-name)
+                  in the Amazon Simple Queue Service Developer Guide."
                 type: object
             required:
             - queueName
@@ -105,6 +126,7 @@ spec:
                   type: object
                 type: array
               queueURL:
+                description: The URL of the created Amazon SQS queue.
                 type: string
             required:
             - ackResourceMetadata
