--- a/apis/v1alpha1/ack-generate-metadata.yaml
+++ b/apis/v1alpha1/ack-generate-metadata.yaml
@@ -1,11 +1,11 @@
 ack_generate_info:
-  build_date: "2022-05-07T03:12:10Z"
-  build_hash: 92aec8dac9ebb11cd5c84dede1e7f1d6c016c36f
-  go_version: go1.17.9
-  version: v0.18.4-5-g92aec8d-dirty
+  build_date: "2022-12-13T15:43:12Z"
+  build_hash: 2d63e49783603e29c35ea16ed35e3c8749cabd45
+  go_version: go1.18.1
+  version: v0.21.0-3-g2d63e49-dirty
 api_directory_checksum: af2a3458a8e0a976a4f356d799302d2e9327dad5
 api_version: v1alpha1
-aws_sdk_go_version: v1.44.4
+aws_sdk_go_version: v1.44.93
 generator_config_info:
   file_checksum: 2ad2d29f5d0ede78d56824d46f98ece24e2edae0
   original_file_name: generator.yaml
