--- a/config/crd/bases/sqs.services.k8s.aws_queues.yaml
+++ b/config/crd/bases/sqs.services.k8s.aws_queues.yaml
@@ -45,12 +45,38 @@ spec:
                 type: string
               kmsMasterKeyID:
                 type: string
+              kmsMasterKeyRef:
+                description: "AWSResourceReferenceWrapper provides a wrapper around
+                  *AWSResourceReference type to provide more user friendly syntax
+                  for references using 'from' field Ex: APIIDRef: \n from: name: my-api"
+                properties:
+                  from:
+                    description: AWSResourceReference provides all the values necessary
+                      to reference another k8s resource for finding the identifier(Id/ARN/Name)
+                    properties:
+                      name:
+                        type: string
+                    type: object
+                type: object
               maximumMessageSize:
                 type: string
               messageRetentionPeriod:
                 type: string
               policy:
                 type: string
+              policyRef:
+                description: "AWSResourceReferenceWrapper provides a wrapper around
+                  *AWSResourceReference type to provide more user friendly syntax
+                  for references using 'from' field Ex: APIIDRef: \n from: name: my-api"
+                properties:
+                  from:
+                    description: AWSResourceReference provides all the values necessary
+                      to reference another k8s resource for finding the identifier(Id/ARN/Name)
+                    properties:
+                      name:
+                        type: string
+                    type: object
+                type: object
               queueName:
                 type: string
               receiveMessageWaitTimeSeconds:
