--- a/apis/v1alpha1/generator.yaml
+++ b/apis/v1alpha1/generator.yaml
@@ -7,6 +7,11 @@ resources:
           AttributeNames:
             values:
               - All
+    hooks:
+      sdk_get_attributes_post_set_output:
+        template_path: hooks/queue/sdk_get_attributes_post_set_output.go.tpl
+      sdk_update_pre_build_request:
+        template_path: hooks/queue/sdk_update_pre_build_request.go.tpl
     fields:
       DelaySeconds:
         is_attribute: true
@@ -58,10 +63,6 @@ resources:
         is_required: true
         is_immutable: true
         type: string
-      Tags:
-        compare:
-          is_ignored: true
       QueueUrl:
         is_readonly: true
         is_primary_key: true
-      
