add hook and generate code

--- a/apis/v1alpha1/generator.yaml
+++ b/apis/v1alpha1/generator.yaml
@@ -8,6 +8,8 @@ resources:
             values:
               - All
     hooks:
+      sdk_get_attributes_pre_set_output:
+        template_path: hooks/queue/sdk_get_attributes_pre_set_output.go.tpl
       sdk_get_attributes_post_set_output:
         template_path: hooks/queue/sdk_get_attributes_post_set_output.go.tpl
       sdk_update_pre_build_request:
