Support queues `RedriveAllowPolicy`
Fixes https://github.com/aws-controllers-k8s/community/issues/1806

--- a/apis/v1alpha1/generator.yaml
+++ b/apis/v1alpha1/generator.yaml
@@ -56,6 +56,9 @@ resources:
       RedrivePolicy:
         is_attribute: true
         type: string
+      RedriveAllowPolicy:
+        is_attribute: true
+        type: string
       QueueArn:
         is_attribute: true
         is_arn: true
