--- a/config/crd/bases/sqs.services.k8s.aws_queues.yaml
+++ b/config/crd/bases/sqs.services.k8s.aws_queues.yaml
@@ -81,6 +81,8 @@ spec:
                 type: string
               receiveMessageWaitTimeSeconds:
                 type: string
+              redriveAllowPolicy:
+                type: string
               redrivePolicy:
                 type: string
               tags:
