set DelaySeconds default value for setQueueAttributes call when no attribute changes

--- a/apis/v1alpha1/generator.yaml
+++ b/apis/v1alpha1/generator.yaml
@@ -14,6 +14,8 @@ resources:
         template_path: hooks/queue/sdk_get_attributes_post_set_output.go.tpl
       sdk_update_pre_build_request:
         template_path: hooks/queue/sdk_update_pre_build_request.go.tpl
+      sdk_update_post_build_request:
+        template_path: hooks/queue/sdk_update_post_build_request.go.tpl
     fields:
       DelaySeconds:
         is_attribute: true
