Correctly handle `NonExistentQueue` API error
Regenerate the controller with a new exception directive, that instruct
the controller on treating `AWS.SimpleQueueService.NonExistentQueue`
error messages (known as Codes in aws-sdk-go) as 404 HTTP Status code.
This allow the controller to treat this error as a "resource not found"
case and trigger the recreation of the queue

Signed-off-by: Amine Hilaly <hilalyamine@gmail.com>

--- a/apis/v1alpha1/generator.yaml
+++ b/apis/v1alpha1/generator.yaml
@@ -1,5 +1,9 @@
 resources:
   Queue:
+    exceptions:
+      errors:
+        404:
+          code: AWS.SimpleQueueService.NonExistentQueue
     unpack_attributes_map:
       set_attributes_single_attribute: false
       get_attributes_input:
