--- a/config/crd/bases/sqs.services.k8s.aws_queues.yaml
+++ b/config/crd/bases/sqs.services.k8s.aws_queues.yaml
@@ -97,6 +97,8 @@ spec:
                 type: string
               redrivePolicy:
                 type: string
+              sqsManagedSSEEnabled:
+                type: string
               tags:
                 additionalProperties:
                   type: string
