--- a/generator.yaml
+++ b/generator.yaml
@@ -18,6 +18,30 @@ resources:
         template_path: hooks/queue/sdk_get_attributes_post_set_output.go.tpl
       sdk_update_pre_build_request:
         template_path: hooks/queue/sdk_update_pre_build_request.go.tpl
+    print:
+      add_age_column: true
+      add_synced_column: true
+      additional_columns:
+        - name: DelaySeconds
+          type: string
+          json_path: .spec.delaySeconds
+          priority: 0
+        - name: visibilityTimeout
+          type: string
+          json_path: .spec.visibilityTimeout
+          priority: 0
+        - name: maximumMessageSize
+          type: string
+          json_path: .spec.maximumMessageSize
+          priority: 1
+        - name: messageRetentionPeriod
+          type: string
+          json_path: .spec.messageRetentionPeriod
+          priority: 1
+        - name: receiveMessageWaitTimeSeconds
+          type: string
+          json_path: .spec.receiveMessageWaitTimeSeconds
+          priority: 1
     fields:
       DelaySeconds:
         is_attribute: true
