--- a/helm/templates/caches-role.yaml
+++ b/helm/templates/caches-role.yaml
@@ -1,7 +1,14 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: ack-namespaces-cache-sqs-controller
+  name: {{ include "ack-sqs-controller.app.fullname" . }}-namespaces-cache
+  labels:
+    app.kubernetes.io/name: {{ include "ack-sqs-controller.app.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
+    k8s-app: {{ include "ack-sqs-controller.app.name" . }}
+    helm.sh/chart: {{ include "ack-sqs-controller.chart.name-version" . }}
 rules:
 - apiGroups:
   - ""
@@ -15,8 +22,15 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: ack-configmaps-cache-sqs-controller
+  name: {{ include "ack-sqs-controller.app.fullname" . }}-configmaps-cache
   namespace: {{ .Release.Namespace }}
+  labels:
+    app.kubernetes.io/name: {{ include "ack-sqs-controller.app.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
+    k8s-app: {{ include "ack-sqs-controller.app.name" . }}
+    helm.sh/chart: {{ include "ack-sqs-controller.chart.name-version" . }}
 rules:
 - apiGroups:
   - ""
