test: iam role selector
add test for iam role selector

--- a/config/rbac/cluster-role-controller.yaml
+++ b/config/rbac/cluster-role-controller.yaml
@@ -43,6 +43,7 @@ rules:
   resources:
   - adoptedresources
   - fieldexports
+  - iamroleselectors
   verbs:
   - create
   - delete
@@ -56,6 +57,7 @@ rules:
   resources:
   - adoptedresources/status
   - fieldexports/status
+  - iamroleselectors/status
   verbs:
   - get
   - patch
