--- a/config/crd/bases/sqs.services.k8s.aws_queues.yaml
+++ b/config/crd/bases/sqs.services.k8s.aws_queues.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.16.2
+    controller-gen.kubebuilder.io/version: v0.19.0
   name: queues.sqs.services.k8s.aws
 spec:
   group: sqs.services.k8s.aws
@@ -137,15 +137,15 @@ spec:
 
                   When you use queue tags, keep the following guidelines in mind:
 
-                     * Adding more than 50 tags to a queue isn't recommended.
+                    - Adding more than 50 tags to a queue isn't recommended.
 
-                     * Tags don't have any semantic meaning. Amazon SQS interprets tags as
-                     character strings.
+                    - Tags don't have any semantic meaning. Amazon SQS interprets tags as
+                      character strings.
 
-                     * Tags are case-sensitive.
+                    - Tags are case-sensitive.
 
-                     * A new tag with a key identical to that of an existing tag overwrites
-                     the existing tag.
+                    - A new tag with a key identical to that of an existing tag overwrites
+                      the existing tag.
 
                   For a full list of tag restrictions, see Quotas related to queues (https://docs.aws.amazon.com/AWSSimpleQueueService/latest/SQSDeveloperGuide/sqs-limits.html#limits-queues)
                   in the Amazon SQS Developer Guide.
