--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -91,7 +91,7 @@ spec:
         - --feature-gates
         - "$(FEATURE_GATES)"
 {{- end }}
-        - --enable-carm={{ .Values.enableCARM }}
+        - --enable-carm=${ENABLE_CARM}
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         name: controller
@@ -123,6 +123,8 @@ spec:
           value: {{ .Values.log.level | quote }}
         - name: ACK_RESOURCE_TAGS
           value: {{ join "," .Values.resourceTags | quote }}
+        - name: ENABLE_CARM
+          value: {{ .Values.enableCARM | quote }}
 {{- if gt (int .Values.reconcile.defaultResyncPeriod) 0 }}
         - name: RECONCILE_DEFAULT_RESYNC_SECONDS
           value: {{ .Values.reconcile.defaultResyncPeriod | quote }}
