generate with code-gen v0.53.1

--- a/config/crd/common/bases/services.k8s.aws_iamroleselectors.yaml
+++ b/config/crd/common/bases/services.k8s.aws_iamroleselectors.yaml
@@ -40,6 +40,9 @@ spec:
             properties:
               arn:
                 type: string
+                x-kubernetes-validations:
+                - message: Value is immutable once set
+                  rule: self == oldSelf
               namespaceSelector:
                 description: IAMRoleSelectorSpec defines the desired state of IAMRoleSelector
                 properties:
@@ -62,9 +65,17 @@ spec:
                 type: object
               resourceTypeSelector:
                 items:
-                  description: |-
-                    GroupVersionKind unambiguously identifies a kind.  It doesn't anonymously include GroupVersion
-                    to avoid automatic coercion.  It doesn't use a GroupVersion to avoid custom marshalling
+                  properties:
+                    group:
+                      type: string
+                    kind:
+                      type: string
+                    version:
+                      type: string
+                  required:
+                  - group
+                  - kind
+                  - version
                   type: object
                 type: array
             required:
