--- a/config/rbac/cluster-role-controller.yaml
+++ b/config/rbac/cluster-role-controller.yaml
@@ -41,8 +41,8 @@ rules:
 - apiGroups:
   - services.k8s.aws
   resources:
-  - adoptedresources
   - fieldexports
+  - iamroleselectors
   verbs:
   - create
   - delete
@@ -54,8 +54,8 @@ rules:
 - apiGroups:
   - services.k8s.aws
   resources:
-  - adoptedresources/status
   - fieldexports/status
+  - iamroleselectors/status
   verbs:
   - get
   - patch
