--- a/apis/v1alpha1/ack-generate-metadata.yaml
+++ b/apis/v1alpha1/ack-generate-metadata.yaml
@@ -1,13 +1,13 @@
 ack_generate_info:
-  build_date: "2025-11-29T03:36:21Z"
-  build_hash: 23c7074fa310ad1ccb38946775397c203b49f024
+  build_date: "2025-12-11T23:39:26Z"
+  build_hash: 5c8b9050006ef6c7d3a97c279e7b1bc163f20a0a
   go_version: go1.25.4
-  version: v0.56.0
+  version: v0.56.0-3-g5c8b905
 api_directory_checksum: 2627dc306e3a83c86c04050c6c4336451459e728
 api_version: v1alpha1
 aws_sdk_go_version: v1.32.6
 generator_config_info:
-  file_checksum: b332aeda9a33b58316273296754ee470b9568b59
+  file_checksum: 7d19f3bad5c4ff9efc3550284a2e9284212afb28
   original_file_name: generator.yaml
 last_modification:
   reason: API generation
