--- a/apis/v1alpha1/ack-generate-metadata.yaml
+++ b/apis/v1alpha1/ack-generate-metadata.yaml
@@ -1,13 +1,13 @@
 ack_generate_info:
-  build_date: "2025-12-11T23:39:26Z"
-  build_hash: 5c8b9050006ef6c7d3a97c279e7b1bc163f20a0a
+  build_date: "2025-12-23T20:35:23Z"
+  build_hash: 43713d4546b29b09ac85cbb3da854425045237bd
   go_version: go1.25.4
-  version: v0.56.0-3-g5c8b905
+  version: v0.56.0-4-g43713d4
 api_directory_checksum: 2627dc306e3a83c86c04050c6c4336451459e728
 api_version: v1alpha1
 aws_sdk_go_version: v1.32.6
 generator_config_info:
-  file_checksum: 7d19f3bad5c4ff9efc3550284a2e9284212afb28
+  file_checksum: 022a45cf8564ebeaeb4fee6816d3a1bf540046bf
   original_file_name: generator.yaml
 last_modification:
   reason: API generation
